Creacion de las rondas y arreglitos

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <button class = "boton" data = "azul" > Azul </button>
     <button class = "boton" data = "amarillo" > Amarillo </button>
 </section>
+<button class = 'iniciar'>Iniciar</button>
+<button class = 'reiniciar'>reiniciar</button>
 </div>
 <script src="script.js"></script>
 </body>
