--- a/index.html
+++ b/index.html
@@ -8,25 +8,47 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <section class = pagina1>
+        <div class = 'centrado'>
+            <h1>Bienvenido a Simon Dice</h1>
+            <p> <strong>"Simon dice"  es un juego clasico y divertido para personas de todas las edades. El objetivo es seguir las instrucciones que da Simon</strong> </p>
+            <input id = 'name' class = 'input' type="text" name="nombre" placeholder="Introduce tu nombre">
+            <button class = 'ir'>Ir al Juego</button>
+    </section>
+
+    <section class = 'pagina2'>
+
+
     <div class = 'centrado'>
-<h1>Bienvenido a Simon Dice</h1>
-<p> <strong>"Simon dice"  es un juego clasico y divertido para personas de todas las edades. El objetivo es seguir las instrucciones que da Simon</strong> </p>
-<section class = 'h2'>
-    <h2 class = 'jugador'>Jugador: </h2>
-    <h2 class = 'rondas'>Rondas:  </h2>
+        <h1>Bienvenido a Simon Dice</h1>
+        <p> <strong>"Simon dice"  es un juego clasico y divertido para personas de todas las edades. El objetivo es seguir las instrucciones que da Simon</strong> </p>
+        <section class = 'h2'>
+            <h2 class = 'jugador'>Jugador: </h2>
+            <h2 class = 'rondas'>Rondas:  </h2>
 
-</section>
+        </section>
 
-<section class = 'botones'>
-    <button class = "boton" data = "rojo"> Rojo </button>
-    <button class = "boton" data = "verde" > Verde </button>
-    <button class = "boton" data = "azul" > Azul </button>
-    <button class = "boton" data = "amarillo" > Amarillo </button>
-</section>
-<button class = 'iniciar'>Iniciar</button>
-<button class = 'reiniciar'>reiniciar</button>
-</div>
+        <section class = 'botones'>
+            <button class = "boton" data = "rojo"> Rojo </button>
+            <button class = "boton" data = "verde" > Verde </button>
+            <button class = "boton" data = "azul" > Azul </button>
+            <button class = "boton" data = "amarillo" > Amarillo </button>
+        </section>
+
+        <button class = 'iniciar'>Iniciar</button>
+        <button class = 'reiniciar'>reiniciar</button>
+        <button class = 'salir'>Salir</button>
+        <section class="jugadores">
+            <h2>Jugadores</h2>
+            <div id="tabla-jugadores">
+                <ul>
+                    
+                </ul>
+            </div>
+        </section>
+    </div>
 <script src="script.js"></script>
+</section>
 </body>
 <footer>Copyright &copy; 2025 by <strong>Jose Fernandez</strong> and <strong>Andrea Rojas</strong> </footer>
-</html> 
+</html>
